format with headings

--- a/Titanic-competition/2022-09-17-catboost-shap-titanic.ipynb
+++ b/Titanic-competition/2022-09-17-catboost-shap-titanic.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "873e59e0-8b41-45c4-85cb-03c464a09caf",
+   "metadata": {},
+   "source": [
+    "# Catboost model explained with SHAP"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "3a106f6f-dbe1-4497-86e9-5e85ad04d12f",
@@ -28,6 +36,22 @@
    ],
    "source": [
     "%pip install -Uqq -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "026f1a3b-0fd6-46f1-b572-bf1a89361eeb",
+   "metadata": {},
+   "source": [
+    "## Process data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "771832de-bc74-445f-ada0-9403a9479e62",
+   "metadata": {},
+   "source": [
+    "### Import datasets"
    ]
   },
   {
@@ -370,6 +394,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1b5f8ea0-d932-434a-81e5-0b474f134b45",
+   "metadata": {},
+   "source": [
+    "### Cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "id": "9e233172-cb59-4a0a-9561-f018730f713c",
@@ -393,6 +425,22 @@
     "                                                 y,\n",
     "                                                 test_size = 0.2,\n",
     "                                                 random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08c07f41-2abf-4a35-a1b0-3081ff20026c",
+   "metadata": {},
+   "source": [
+    "## Catboost modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44dcdb3a-6cd5-47b1-8208-72870820160d",
+   "metadata": {},
+   "source": [
+    "### Initizalize and train model"
    ]
   },
   {
@@ -473,6 +521,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d66cedc8-45be-4c0b-9f44-9ece48f67e5e",
+   "metadata": {},
+   "source": [
+    "### View insights based on the train model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "id": "e73cd40f-1ef1-4b6c-8949-3f38884790b9",
@@ -535,6 +591,14 @@
     "feature_names = X.columns\n",
     "for score, name in sorted(zip(feature_importances, feature_names), reverse = True):\n",
     "    print('{}: {}'.format(name, score))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d031eb4a-031e-4f86-934a-9e097475ffce",
+   "metadata": {},
+   "source": [
+    "### Make prediction"
    ]
   },
   {
@@ -619,6 +683,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c4aedf10-6cc3-4718-9552-9d3d7d0f99aa",
+   "metadata": {},
+   "source": [
+    "## Explain the feature importance in the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6eb18be9-00e2-4402-bbfd-1f4d955f3f1d",
+   "metadata": {},
+   "source": [
+    "### Partial dependence plot"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "406ba4b7-e589-4352-a62b-25feaa585046",
@@ -697,6 +777,14 @@
    ],
    "source": [
     "importance(model = cat, X = X, y = y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "147a091a-0b7b-49b6-8e5c-7cc102075b0b",
+   "metadata": {},
+   "source": [
+    "### SHAP"
    ]
   },
   {
