add tutorial link

--- a/Titanic-competition/2022-09-17-catboost-shap-titanic.ipynb
+++ b/Titanic-competition/2022-09-17-catboost-shap-titanic.ipynb
@@ -786,7 +786,8 @@
    "id": "147a091a-0b7b-49b6-8e5c-7cc102075b0b",
    "metadata": {},
    "source": [
-    "### SHAP"
+    "### SHAP\n",
+    "[Tutorial](https://shap.readthedocs.io/en/latest/example_notebooks/tabular_examples/tree_based_models/Catboost%20tutorial.html)"
    ]
   },
   {
